--- a/Xamarin/App/App/Views/ProductPage.xaml
+++ b/Xamarin/App/App/Views/ProductPage.xaml
@@ -10,7 +10,7 @@
     <!--Built in Cells-->
     <ListView.ItemTemplate>
         <DataTemplate>
-            <TextCell Text="{Binding .}" />
+            <TextCell Text="{Binding Universidad}" />
         </DataTemplate>
     </ListView.ItemTemplate>
     
